# STL3DLooker

./: .gitignore  CMakeLists.txt  canvas.hpp  main.cpp  math.hpp  readSTL.hpp  rightTestOutput.ppm  test.cpp
